--- a/template.yaml
+++ b/template.yaml
@@ -19,6 +19,9 @@ Parameters:
   TweetsTableIndex:
     Type: String
     Default: Keyword-index
+  CloudWatchCustomNS:
+    Type: String
+    Default: tweetsFinal
   TwitterBearerToken:
     Type: AWS::SSM::Parameter::Value<String>
     Description: Twitter Bearer Token value saved in AWS SSM Parameter store
@@ -135,6 +138,7 @@ Resources:
       Environment:
         Variables:
           TWEETS_TABLE_NAME: !Ref TweetsTableName
+          CW_NAMESPACE: !Ref CloudWatchCustomNS
 
   StartStreamFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
@@ -196,7 +200,7 @@ Resources:
       Architectures:
         - x86_64
       Events:
-        StopStream:
+        GetTweet:
           Type: Api
           Properties:
             Path: /tweets
@@ -208,6 +212,34 @@ Resources:
         Variables:
           TWEETS_TABLE_NAME: !Ref TweetsTableName
           TWEETS_TABLE_INDEX: !Ref TweetsTableIndex
+
+  GetTweetsStatisticsFunction:
+    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Properties:
+      CodeUri: dist/webpackBundle/GetTweetsStatisticsFn
+      Handler: index.handler
+      MemorySize: 128
+      Timeout: 10
+      Architectures:
+        - x86_64
+      Events:
+        StopStream:
+          Type: Api
+          Properties:
+            Path: /tweetsStatistics
+            Method: get
+      Environment:
+        Variables:
+          CW_NAMESPACE: !Ref CloudWatchCustomNS
+      Policies:
+        - Statement:
+          - Sid: AccessCloudWatchMetricsPolicy
+            Effect: Allow
+            Action:
+            - cloudwatch:GetMetricStatistics
+            - cloudwatch:GetMetricData
+            - cloudwatch:ListMetrics
+            Resource: '*'
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
