refactor(startStream): added Joi validation

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1131.0",
+    "joi": "^17.6.0",
     "twitter-api-v2": "^1.12.0"
   },
   "devDependencies": {
