--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Twitter Stream Demo",
   "main": "webpack.config.js",
   "scripts": {
+    "lint": "tslint --fix -c tslint.json 'src/**/*{.ts,.tsx}'",
     "build": "tsc",
     "bundle": "webpack --config webpack.config.js",
     "predeploy": "npm run build && npm run bundle",
@@ -22,6 +23,7 @@
     "@types/aws-lambda": "^8.10.97",
     "@types/node": "^17.0.31",
     "ts-loader": "^8.0.17",
+    "tslint": "^6.1.3",
     "typescript": "^4.6.4",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.5.0"
